fix : refactor bad code